# EPAi_Capstone

./: db.sqlite3  manage.py  pyproject.toml
friends/: models.py
friends/migrations/: 0001_initial.py  0002_rename_friends_friend.py
powerform/: asgi.py  settings.py  urls.py  views.py  wsgi.py
templates/: base.html  home_view.html
tests/: test_epai_capstone.py
theme/static_src/: package-lock.json  tailwind.config.js
